--- a/package.json
+++ b/package.json
@@ -195,20 +195,20 @@
     "@typescript-eslint/parser": "^8.34.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.2.0",
+    "@vscode/vsce": "^3.6.0",
     "c8": "^10.1.3",
     "chai": "^5.2.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
-    "glob": "^8.0.3",
+    "glob": "^11.0.3",
     "mocha": "^11.7.1",
     "nyc": "^17.1.0",
     "prettier": "^3.5.3",
-    "sinon": "^20.0.0",
+    "sinon": "^21.0.0",
     "ts-loader": "^9.4.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0",
-    "vsce": "^2.15.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^6.0.1"
   },
